fixtures/errors/lower-unbound/input.fz
fn main() do
  missing_var
end
